Bug fixes and alignment issues

--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,14 @@ nav ul li{
     display: flex;
   	flex-direction: column;
     list-style: none;
+    width: 290px;
     margin: 25px 0px;
 }
 
 nav ul li a{
     color: #7c7c7c;
     text-decoration: none;
-    font-size: 30x;
+    font-size: 30px;
     font-weight: bold;
     font-family: 'Old computer St', sans-serif;
     padding: 10px;
